tests/ui/traits/next-solver/lazy-nested-obligations-2.next.stderr
error[E0271]: type mismatch resolving `<i32 as With>::F == fn(&str) {f}`
  --> $DIR/lazy-nested-obligations-2.rs:20:21
   |
LL |     let _: V<i32> = V(f);
   |                     ^^^^ expected fn item, found fn pointer
   |
   = note: expected fn item `for<'a> fn(&'a _) {f}`
           found fn pointer `for<'a> fn(&'a _)`

error[E0271]: type mismatch resolving `<i32 as With>::F == fn(&str) {f}`
  --> $DIR/lazy-nested-obligations-2.rs:27:22
   |
LL |     let _: E3<i32> = E3::Var(f);
   |                      ^^^^^^^^^^ expected fn item, found fn pointer
   |
   = note: expected fn item `for<'a> fn(&'a _) {f}`
           found fn pointer `for<'a> fn(&'a _)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
